if( ${UNIX} )
	include_directories("${PROJECT_SOURCE_DIR}/lib" "${PROJECT_BINARY_DIR}/lib/")
	link_directories("${PROJECT_BINARY_DIR}/lib/NGT")
	add_subdirectory("${PROJECT_SOURCE_DIR}/samples/hamming-uint8")
	add_subdirectory("${PROJECT_SOURCE_DIR}/samples/l2-uint8")
	add_subdirectory("${PROJECT_SOURCE_DIR}/samples/l2-uint8-range-search")
	add_subdirectory("${PROJECT_SOURCE_DIR}/samples/cosine-float")
	add_subdirectory("${PROJECT_SOURCE_DIR}/samples/jaccard-sparse")
	if(NOT DEFINED NGT_QBG_DISABLED)
		add_subdirectory("${PROJECT_SOURCE_DIR}/samples/qg-l2-float")
		add_subdirectory("${PROJECT_SOURCE_DIR}/samples/qg-capi")
		add_subdirectory("${PROJECT_SOURCE_DIR}/samples/qbg-capi")
	endif()
endif()
